# nanoTorch

./: CMakeLists.txt
python/: test_import.py
src/: nanotorch.cpp
